--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -29,8 +29,8 @@ min-height: 100%;
 			tecnologia, este é o sítio certo para ti. Somos um grupo de alunos de várias
 			áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos,
 			e transmitir os nossos conhecimentos promovendo a entreajuda e inovação! 
-			A HackerSchool está a recrutar novos membros de 14 de Setembro a 9 de 
-			Outubro.
+			A HackerSchool está a recrutar novos membros de
+			até 5 de Março!
 		</p>
 		</section>
 
