--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -17,29 +17,54 @@
 	        
         <div class="dynamicThingy fader">
         <h4>Quem somos?</h4>
-        <p style="color: white; text-align: justify;">Somos um grupo de alunos de várias áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos, e transmitir os nossos conhecimentos!</p>
+        <p style="color: white; text-align: justify;">
+          Somos um núcleo de alunos do Instituto Superior Técnico com uma enorme vontade de aprender em equipa e conceber ideias novas das mais variadas áreas onde a tecnologia se insere.
+        </p>
         </div>
         
         <div class="dynamicThingy fader">
         <h4 style="text-align: justify;">O que é a HackerSchool?</h4>
-        <p style="color: white; text-align: justify;">A HackerSchool é uma associação académica, fundada em 2012, que desenvolve actividades num ambiente multidisciplinar, de <em>learn-by-doing</em> e de aprendizagem entre pares, inspirado nos valores da cultura <a href="http://stallman.org/articles/on-hacking.html" title="What is Hacking?" target="_blank"><em>hacker</em></a>.</p>
-        <p style="color: white; text-align: justify;">Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em <em>open electronics</em>, <em>open materials</em>, <em>open fabrication</em>, entre outros.</p>
+        <p style="color: white; text-align: justify;">
+          A HackerSchool é uma associação académica que se foca no desenvolvimento de actividades num ambiente multidisciplinar, de learn-by-doing e de aprendizagem entre pares, inspirado nos valores da cultura hacker. 
+        </p>
+        <br>
+        <p style="color: white; text-align: justify;">
+          Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em open electronics, open materials, open fabrication, entre outros. 
+        </p>
         </div>
 
         <div class="dynamicThingy fader">
         <h4 style="text-align: justify;">Como funciona?</h4>
-        <p style="color: white; text-align: justify;">A HackerSchool funciona em ciclos semestrais com WorkShops, HackDays e entre outros eventos de TeamBuilding.</p>
+        <p style="color: white; text-align: justify;">
+          A HackerSchool funciona em ciclos semestrais com WorkShops, HackDays e entre outros eventos de TeamBuilding. 
+        </p>
+        <br>
         <ul>
-        <li style="color: white; text-align: justify;"><strong>HackDay</strong>: Um dia de convívio entre os participantes, no qual se concebem projetos temáticos de curta duração.</li>
-        <li style="color: white; text-align: justify;"><strong>Workshop</strong>: Um evento em que é dada formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento pode ser divido entre WorkShops Internos - dados da comunidade do núcleo para o núcleo - e WorkShops Externos - dados para a comunidade do tecnico.</li>
+        <li style="color: white; text-align: justify;">
+          <strong>HackDay</strong>:  Um dia de convívio entre os participantes, no qual se concebem projetos temáticos de curta duração.
+        </li>
+        <br>
+        <li style="color: white; text-align: justify;">
+          <strong>Workshop</strong>: Um evento em que é dada formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento pode ser divido entre 
+          <br> WorkShops Internos - dados da comunidade do núcleo para o núcleo 
+          <br> WorkShops Externos - dados para a comunidade do tecnico. 
+        </li>
         </ul>
         </div>
 
         <div class="dynamicThingy fader">
         <h4 style="text-align: justify;">Objectivos</h4>
-        <p style="color: white; text-align: justify;">O objectivo prioritário da HackerSchool é criar um espaço de colaboração que estimule alunos apaixonados por tecnologia a realizar os seus projectos e, dessa forma, ajudá-los a encontrar a sua vocação e atingir o seu potencial máximo, tanto como indivíduos como empreendedores, através de uma interacção hands-on com tecnologia, engenharia e ciência.</p>
-        <p style="color: white; text-align: justify;">Pretende-se ter uma geração de alunos com ideias novas e um modo diferente de pensar sobre o mundo, que criem produtos e soluções inovadoras.</p>
-        <p style="color: white; text-align: justify;">Mais, a HackerSchool pretende afirmar-se como um centro de convergência multidisciplinar onde alunos e professores de cursos diferentes se juntam para experimentar e partilhar ideias diferentes mas complementares.</p>
+        <p style="color: white; text-align: justify;">
+          Enquanto núcleo do Técnico, a HackerSchool tem como objetivo fulcrar a criação de um espaço de colaboração que estimule e junte alunos apaixonados por tecnologia a realizar os seus projectos e, dessa forma, ajudá-los a encontrar a sua vocação e atingir o seu potencial máximo, tanto como indivíduos como empreendedores, através de uma interacção hands-on com tecnologia, engenharia e ciência. 
+        </p>
+        <br>
+        <p style="color: white; text-align: justify;">
+          Pretende-se ter uma geração de alunos com novas ideias em mente com uma forma diferente de pensar sobre os problemas do mundo, repercutindo-se na futura criação de produtos e concepção de soluções inovadoras. 
+        </p>
+        <br>
+        <p style="color: white; text-align: justify;">
+          A HackerSchool também se pretende afirmar como um centro de convergência multidisciplinar onde alunos e professores de cursos diferentes se unem para experimentar e partilhar ideias inovadoras. 
+        </p>
         </div>
 
     <!-- </div> -->
