--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,29 +26,30 @@ echo "Connected successfully";
 {{ "<!-- /navigation -->" | safeHTML }}
 
 {{ "<!-- header -->" | safeHTML }}
-<div class="col-md-12 nopadding">
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		{{ range $index, $element := after 1 .Site.Params.carouselImagens }}
-		<li data-target="#carouselExampleIndicators" data-slide-to="{{ add $index 1 }}"></li>
-		{{ end }}
-		</ol>
-		<div class="carousel-inner carousel-inner-home">
-		{{ with (index $.Site.Params.carouselImagens 0) }}
-		<div class="carousel-item active">
-			<img class="d-block w-100" src="{{ . | absURL }}" alt="First slide">
-		</div>
-		{{ end }}
-		{{ range after 1 .Site.Params.carouselImagens }}
-		<div class="carousel-item">
-			<img class="d-block w-100" src="{{ . | absURL }}">
-		</div>
-		{{ end }}
-		</div>
-		
-	</div>
+<div class="carouselContainer">
+  <a id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" href='{{ "recrutamento" | absURL }}'>
+    <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    {{ range $index, $element := after 1 .Site.Params.carouselImagens }}
+    <li data-target="#carouselExampleIndicators" data-slide-to="{{ add $index 1 }}"></li>
+    {{ end }}
+    </ol>
+    <div class="carousel-inner carousel-inner-home">
+    {{ with (index $.Site.Params.carouselImagens 0) }}
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{{ . | absURL }}" alt="First slide">
+    </div>
+    {{ end }}
+    {{ range after 1 .Site.Params.carouselImagens }}
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{{ . | absURL }}">
+    </div>
+    {{ end }}
+    </div>
+  </a> 
+  <!--
 	<div style="position: absolute; top:0px; width:100%; height:100%;">
+  -->
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 				<span class="sr-only">Previous</span>
@@ -57,7 +58,7 @@ echo "Connected successfully";
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
 				<span class="sr-only">Next</span>
       </a>
-      
+      <!--
 		<div style="position: absolute; top:25%; height: 75%; width:100%; text-align: center;">
 			{{ with .Site.Params.banner.title }} <h2 id="bannerTitle" class="disapearWhenSmall text-white mb-3">{{ . }}</h2> {{ end }}
       {{ with .Site.Params.banner.description | safeHTML }} <p class="disapearWhenSmall text-white mb-4">{{ . }}</p> {{ end }}
@@ -68,7 +69,10 @@ echo "Connected successfully";
         {{ end }}
       </div>
     </div>
-	</div>
+  -->
+  <!--
+  </div>
+-->
 </div>
 {{ "<!-- /header -->" | safeHTML }}
 
@@ -78,8 +82,10 @@ echo "Connected successfully";
       <div class="row justify-content-center">
           <div class="col-12 text-center">
             <h1 class="section-title">A HackerSchool</h1>
-            <p style="color:white; margin-bottom: 40px">A HackerSchool é uma associação académica, fundada em 2012, que desenvolve actividades num ambiente multidisciplinar, de learn-by-doing e de aprendizagem entre pares, inspirado nos valores da cultura hacker.
-              <br>Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em open electronics, open materials, open fabrication, entre outros.
+            <p style="color:white; margin-bottom: 40px">
+              Com o maior foco na criação de projetos das mais diversas áreas da tecnologia, onde implica que os seus membros aprendam e coloquem em prática o seu conhecimento em situações reais, a HackerSchool anda desde de 2012 na criação de uma comunidade que partilhe estes principios dentro do IST.
+              <br> Acreditamos num ambiente multidisciplinar e aberto para qualquer aluno, com ou sem bases, ajudando na aprendizagem de acordo com o ideal learn by doing e com partilha de conhecimentos através de Workshops e através dos nossos projetos desenvolvidos ou em desenvolvimento. 
+
             </p>
             <a  href='{{ "membros" | absURL }}' class="btn btn-primary" style="margin-bottom: 40px;">Vê aqui os nossos membros! </a>
           </div>
