A lot of commits in one... sorry for whoever has to do work after me. If there's difficulties in this commit you should probably contact me. HS robot gif not commited (needs compression)

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -76,6 +76,14 @@ echo "Connected successfully";
 </div>
 {{ "<!-- /header -->" | safeHTML }}
 
+<section class="section sec-membros fs-large pb-4">
+  <div style="display: flex; margin: auto">
+    {{ if .Site.Params.recruitmentTime }}
+      <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary m-auto"> Vê a nossa página de recrutamento aqui! </a>
+    {{ end }}
+  </div>
+</section>
+
 {{ "<!-- sobre -->" | safeHTML }}
 <section class="section sec-projetos fs-large">
   <div class="container">
