--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -9,7 +9,7 @@
 {{ "<!-- /navigation -->" | safeHTML }}
 
 <!-- details page -->
-<section style="text-align: justify;
+<section style="text-align: left;
 min-height: 100%;
 /* equal to footer height */ " class="single sec-membros fader-alternate">
 
