--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -12,57 +12,57 @@
 <section style="padding-bottom: 48px;" class="single sec-membros fader-alternate">
   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Sobre nós</h1> 
   
-  <div class="container pt-4">
+  <div class="container pt-4 aboutUsContainer">
     <!-- <div style="color: white;" class="p-5 bg-gray"> -->
 	        
         <div class="dynamicThingy fader">
         <h4>Quem somos?</h4>
-        <p style="color: white; text-align: justify;">
+        <p style="color: white;">
           Somos um núcleo de alunos do Instituto Superior Técnico com uma enorme vontade de aprender em equipa e conceber ideias novas das mais variadas áreas onde a tecnologia se insere.
         </p>
         </div>
         
         <div class="dynamicThingy fader">
-        <h4 style="text-align: justify;">O que é a HackerSchool?</h4>
-        <p style="color: white; text-align: justify;">
+        <h4>O que é a HackerSchool?</h4>
+        <p style="color: white;">
           A HackerSchool é uma associação académica que se foca no desenvolvimento de actividades num ambiente multidisciplinar, de learn-by-doing e de aprendizagem entre pares, inspirado nos valores da cultura hacker. 
         </p>
         <br>
-        <p style="color: white; text-align: justify;">
+        <p style="color: white;">
           Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em open electronics, open materials, open fabrication, entre outros. 
         </p>
         </div>
 
         <div class="dynamicThingy fader">
-        <h4 style="text-align: justify;">Como funciona?</h4>
-        <p style="color: white; text-align: justify;">
+        <h4>Como funciona?</h4>
+        <p style="color: white;">
           A HackerSchool funciona em ciclos semestrais com WorkShops, HackDays e entre outros eventos de TeamBuilding. 
         </p>
         <br>
         <ul>
-        <li style="color: white; text-align: justify;">
+        <li style="color: white;">
           <strong>HackDay</strong>:  Um dia de convívio entre os participantes, no qual se concebem projetos temáticos de curta duração.
         </li>
         <br>
-        <li style="color: white; text-align: justify;">
+        <li style="color: white;">
           <strong>Workshop</strong>: Um evento em que é dada formação base acerca de um determinado tema, sendo dado acesso aos participantes ferramentas que podem utilizar para aplicarem os conhecimentos adquiridos na concretização das suas ideias. Este evento pode ser divido entre 
-          <br> WorkShops Internos - dados da comunidade do núcleo para o núcleo 
-          <br> WorkShops Externos - dados para a comunidade do tecnico. 
+          <br> <strong class="sub"> WorkShops Internos </strong> - dados da comunidade do núcleo para o núcleo 
+          <br> <strong class="sub"> WorkShops Externos </strong> - dados para a comunidade do tecnico. 
         </li>
         </ul>
         </div>
 
         <div class="dynamicThingy fader">
-        <h4 style="text-align: justify;">Objectivos</h4>
-        <p style="color: white; text-align: justify;">
+        <h4>Objectivos</h4>
+        <p style="color: white;">
           Enquanto núcleo do Técnico, a HackerSchool tem como objetivo fulcrar a criação de um espaço de colaboração que estimule e junte alunos apaixonados por tecnologia a realizar os seus projectos e, dessa forma, ajudá-los a encontrar a sua vocação e atingir o seu potencial máximo, tanto como indivíduos como empreendedores, através de uma interacção hands-on com tecnologia, engenharia e ciência. 
         </p>
         <br>
-        <p style="color: white; text-align: justify;">
+        <p style="color: white;">
           Pretende-se ter uma geração de alunos com novas ideias em mente com uma forma diferente de pensar sobre os problemas do mundo, repercutindo-se na futura criação de produtos e concepção de soluções inovadoras. 
         </p>
         <br>
-        <p style="color: white; text-align: justify;">
+        <p style="color: white;">
           A HackerSchool também se pretende afirmar como um centro de convergência multidisciplinar onde alunos e professores de cursos diferentes se unem para experimentar e partilhar ideias inovadoras. 
         </p>
         </div>
