--- a/layouts/section/projetos.html
+++ b/layouts/section/projetos.html
@@ -36,9 +36,10 @@
       </div>
       {{ end }}
       
-      <div class="section-divider"></div>
     </div>
-
+  </div>
+  <div class="sec-projetos">
+    <div class="container pt-4">
     <div class="col-12 text-center">
       <h2 class="section-title"> Projetos Antigos </h2>
       
@@ -63,6 +64,7 @@
         {{ end }}
       </div>
     </div>
+  </div>
   </div>
 </section>
 <!-- /details page -->
