--- a/layouts/page/membros.html
+++ b/layouts/page/membros.html
@@ -13,7 +13,7 @@
   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;"> Membros </h1> 
         
 {{ "<!-- membros -->" | safeHTML }}
-  <section class="section sec-projetos">
+  <section class="section sec-membros">
     <div class="container">
       <div class="col-12 text-center">
         <h2 class="section-title">Direção</h2>
@@ -21,6 +21,30 @@
       <div class="row justify-content-center">
           {{ "<!-- membro -->" | safeHTML }}
           {{ range .Site.Data.membros.direcao }}
+          <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
+              <h3 style="padding-top: 15px;">{{ .nome }}
+                <p class="mb-0">{{ .cargo }}</p>
+              </h3>
+              <img src="/images/membros/{{ .imagem }}">
+              {{ if .project }}
+              <p class="hoverAppear">
+                Projeto: <br /> {{ .project }}
+              </p>
+              {{ end }}
+          </div>
+          {{ end }}
+      </div>
+    </div>
+  </section>
+
+  <section class="section sec-projetos">
+    <div class="container">      
+      <div class="col-12 text-center">
+        <h2 class="section-title"> Assistentes de direção </h2>
+      </div>
+      <div class="row justify-content-center">
+          {{ "<!-- membro -->" | safeHTML }}
+          {{ range .Site.Data.membros.subDirecao }}
           <div class="fader member-card col-xl-3 col-lg-4 col-sm-6 col-6 dynamicThingy text-center fader-fadeInUp" style="background-color: var(--secondary-color);">
               <h3 style="padding-top: 15px;">{{ .nome }}
                 <p class="mb-0">{{ .cargo }}</p>
