--- a/themes/dot/layouts/partials/footer.html
+++ b/themes/dot/layouts/partials/footer.html
@@ -1,15 +1,15 @@
 {{ "<!-- footer -->" | safeHTML }}
 <footer class="section sec-membros pb-0">
   <div class="container">
-    <div class="row">
+    <div class="row" style="display: flex; align-items: center;">
       <div class="col-md-4 text-md-left text-center">
        {{ with .Site.Params.copyright }} <p>{{ .}}</p> {{ end }}
       </div>
       <a class="col-md-4 logo-ist" href="https://tecnico.ulisboa.pt"></a>
       <div class="col-md-4 text-md-right text-center">
-        <ul class="list-inline mb-3">
+        <ul class="list-inline mb-0">
           {{ range .Site.Params.socialIcon }}
-          <li class="list-inline-item"><a class="text-color d-inline-block p-2" href="{{ .URL | absURL}}"><i class="{{ .icon }}"></i></a></li>
+          <li class="list-inline-item mb-0"><a class="text-color d-inline-block p-2" href="{{ .URL | absURL}}"><i class="{{ .icon }}"></i></a></li>
           {{ end }}
         </ul>
       </div>
