--- a/themes/dot/layouts/partials/head.html
+++ b/themes/dot/layouts/partials/head.html
@@ -49,4 +49,16 @@
 
 <script src="https://kit.fontawesome.com/5e6468e47f.js" crossorigin="anonymous"></script>
 
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RPEZR14GT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6RPEZR14GT');
+</script>
+
+
 </head>
