Update dos membros e projetos e cargos. Adicionadas as fotos dos membros (por comprimir)

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -91,8 +91,8 @@ echo "Connected successfully";
           <div class="col-12 text-center">
             <h1 class="section-title">A HackerSchool</h1>
             <p style="color:white; margin-bottom: 40px">
-              Com o maior foco na criação de projetos das mais diversas áreas da tecnologia, onde implica que os seus membros aprendam e coloquem em prática o seu conhecimento em situações reais, a HackerSchool anda desde de 2012 na criação de uma comunidade que partilhe estes principios dentro do IST.
-              <br> Acreditamos num ambiente multidisciplinar e aberto para qualquer aluno, com ou sem bases, ajudando na aprendizagem de acordo com o ideal learn by doing e com partilha de conhecimentos através de Workshops e através dos nossos projetos desenvolvidos ou em desenvolvimento. 
+              Desde 2012, a HackerSchool foca-se na criação de projetos nas mais diversas áreas da tecnologia, incentivando os seus membros a aprender e a colocar em prática o seu conhecimento em situações reais.
+              <br> Acreditamos num ambiente multidisciplinar e acessível para qualquer aluno, com ou sem bases, acompanhando o seu processo de aprendizagem, seguindo o ideal learn by doing e partilhando conhecimentos através de Workshops e dos nossos projetos já desenvolvidos ou em desenvolvimento.
 
             </p>
             <a  href='{{ "membros" | absURL }}' class="btn btn-primary" style="margin-bottom: 40px;">Vê aqui os nossos membros! </a>
