--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -24,13 +24,13 @@ min-height: 100%;
 		<section  class="dynamicThingy fader">
 		<h4> Apresentação do recrutamento </h4>
 		<p style="color:white; "> 
-			Boas cibernauta! Se estás a começar o teu curso de engenharia e gostavas 
+			Se estás a começar o teu curso de engenharia e gostavas 
 			de colocar as mãos na massa para ganhares experiência num certo ramo da
 			tecnologia, este é o sítio certo para ti. Somos um grupo de alunos de várias
 			áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos,
 			e transmitir os nossos conhecimentos promovendo a entreajuda e inovação! 
-			A HackerSchool está a recrutar novos membros de
-			até 5 de Março!
+			A HackerSchool está a recrutar novos membros
+			até 7 de Outubro!
 		</p>
 		</section>
 
@@ -73,7 +73,7 @@ min-height: 100%;
         flex-wrap: wrap; flex-direction: row; justify-content: center; margin:auto;">
 			<div style="background-color: var(--secondary-color); width: 250px; " class="dynamicThingy text-left helperCard">
 				Terás uma reunião inicial que serve para debater ideias e para formar grupos,
-				desenvolvendo a tua parte social e trabalho em equipa
+				desenvolvendo a tua parte social e trabalho em equipa.
 
 				<br>
 				<div class="d-flex align-items-center justify-content-center">
@@ -81,8 +81,8 @@ min-height: 100%;
 				</div>
 			</div >
 			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
-				Para alem disso, todos os semestres sao planeados varios workshops em
-				varias areas que consideramos importantes para desenvolver a tua cultura hacker.
+				Para além disso, todos os semestres são planeados vários workshops em
+				várias áreas que consideramos importantes para desenvolver a tua cultura hacker.
 
 				<br>
 				<div class="d-flex align-items-center justify-content-center">
@@ -91,7 +91,7 @@ min-height: 100%;
 			</div>
 			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
 				Para o caso de te sentires sozinho nesta jornada de fazer o teu
-				projeto acontecer, não te preocupes!
+				projeto acontecer, não te preocupes! Temos uma equipa de HackExperts e uma inteira comunidade sempre disposta a ajudar!
 
 				<br>
 				<div class="d-flex align-items-center justify-content-center">
@@ -105,7 +105,7 @@ min-height: 100%;
 		
 		<section class="section shadow fader">
 		<!-- fix url -->
-		<a href="https://maggyoliveira23.typeform.com/to/OcUeYIXM" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
+		<a href="https://ist-hackerschool.typeform.com/recrutamento21" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
 			style="text-align: center;vertical-align: middle;line-height: 40px;
 				width: 100%;font-size: 30;"> 
 				
