--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -105,7 +105,7 @@ min-height: 100%;
 		
 		<section class="section shadow fader">
 		<!-- fix url -->
-		<a href="https://ist-hackerschool.typeform.com/recrutamento21" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
+		<a href="https://shorturl.at/MOVW8" class="btn btn-primary {{ if .Site.Params.recruitmentTime }} {{ else }} disabled {{ end }}" 
 			style="text-align: center;vertical-align: middle;line-height: 40px;
 				width: 100%;font-size: 30;"> 
 				
