--- a/layouts/page/hackercultura/textos.html
+++ b/layouts/page/hackercultura/textos.html
@@ -15,13 +15,14 @@ min-height: 100%;
 	<div style="background-color: 0xfff">
 		<!--padding 100px-->
 		<div class="container pt-4" style="background-color: 0xfff">
-			<a href="/hackercultura/">
+			<a href="/pdfs/HackerEtOrbi-mkfinal.pdf">
 				<section  class="dynamicThingy fader">
 					<h1>Hacker Et Orbi</h1>
 				</section>
 			</a>
 		</div>
 
+		
   </div>
 </section>
 
