Added HackerCultura. Added HackerEtOrbi

--- a/layouts/page/hackercultura.html
+++ b/layouts/page/hackercultura.html
@@ -15,9 +15,9 @@ min-height: 100%;
 	<div style="background-color: 0xfff">
 		<!--padding 100px-->
 		<div class="container pt-4" style="background-color: 0xfff">
-			<a href="/hackercultura/">
+			<a href="textos/">
 				<section  class="dynamicThingy fader">
-					<h1>Hacker Et Orbi</h1>
+					<h1>Textos</h1>
 				</section>
 			</a>
 		</div>
