--- a/layouts/page/hackercultura/textos.html
+++ b/layouts/page/hackercultura/textos.html
@@ -17,7 +17,8 @@ min-height: 100%;
 		<div class="container pt-4" style="background-color: 0xfff">
 			<a href="/pdfs/HackerEtOrbi-mkfinal.pdf">
 				<section  class="dynamicThingy fader">
-					<h1>Hacker Et Orbi</h1>
+					<h1>Hacker et Orbi-Curtas teses para o restauro da cultura
+Hacker na HackerSchool</h1>
 				</section>
 			</a>
 		</div>
