--- a/themes/dot/layouts/partials/head.html
+++ b/themes/dot/layouts/partials/head.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
   <title>{{ .Title }}</title>
@@ -18,7 +19,7 @@
   {{ "<!-- fonts -->" | safeHTML }}
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   
-  <link href="{{ .Site.BaseURL }}css/custom.css" rel="stylesheet">
+  <link href="{{ .Site.BaseURL }}css/custom.min.css" rel="stylesheet">
   <style>
   :root{
     --primary-color:{{ .Site.Params.primaryColor }};
