Tarefas de Manutenção

--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -67,6 +67,12 @@
         </p>
         </div>
 
+        <a href="/sobre/textos">
+          <div class="dynamicThingy fader">
+              <h1>Textos</h1>
+          </div>
+        </a>
+        
     <!-- </div> -->
   </div>
 </section>
