--- a/themes/dot/layouts/partials/head.html
+++ b/themes/dot/layouts/partials/head.html
@@ -46,7 +46,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
   {{ "<!--Favicon-->" | safeHTML }}
-  <link rel="icon" href="{{ .Site.BaseURL }}images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="{{ .Site.BaseURL }}images/favicon.ico" type="image/x-icon">
 
 <script src="https://kit.fontawesome.com/5e6468e47f.js" crossorigin="anonymous"></script>
 
