tentar criar branch para novo site

--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -8,10 +8,14 @@
 </header>
 {{ "<!-- /navigation -->" | safeHTML }}
 
+<div id="overlay"></div>
+<canvas id="matrixCanvas"></canvas>
+<script src="{{ "js/scriptmatrix.js" | relURL }}"></script>
+
 <!-- details page -->
 <section style="padding-bottom: 48px;" class="single sec-membros fader-alternate">
-  <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Sobre nós</h1> 
-  
+<!--   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Sobre nós</h1> 
+ -->  
   <div class="container pt-4 aboutUsContainer">
     <!-- <div style="color: white;" class="p-5 bg-gray"> -->
 	        
