--- a/themes/dot/layouts/partials/navigation.html
+++ b/themes/dot/layouts/partials/navigation.html
@@ -32,10 +32,10 @@
       {{ end }}
     </ul>
     <!-- Language List -->
-    <ul class="list-inline text-center mb-0">
+<!--     <ul class="list-inline text-center mb-0">
       {{ range $.Site.Home.AllTranslations }}
       <li class="list-inline-item"><a class="text-dark" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a></li>
       {{ end }}
-    </ul>
+    </ul> -->
   </div>
 </nav>
