--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,198 +26,20 @@ echo "Connected successfully";
 {{ "<!-- /navigation -->" | safeHTML }}
 
 {{ "<!-- header -->" | safeHTML }}
-<div class="carouselContainer">
-  <a id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" href='{{ "recrutamento" | absURL }}'>
-    <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    {{ range $index, $element := after 1 .Site.Params.carouselImagens }}
-    <li data-target="#carouselExampleIndicators" data-slide-to="{{ add $index 1 }}"></li>
-    {{ end }}
-    </ol>
-    <div class="carousel-inner carousel-inner-home">
-    {{ with (index $.Site.Params.carouselImagens 0) }}
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="{{ . | absURL }}" alt="First slide">
-    </div>
-    {{ end }}
-    {{ range after 1 .Site.Params.carouselImagens }}
-    <div class="carousel-item">
-      <img class="d-block w-100" src="{{ . | absURL }}">
-    </div>
-    {{ end }}
-    </div>
-  </a> 
-  <!--
-	<div style="position: absolute; top:0px; width:100%; height:100%;">
-  -->
-			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="sr-only">Next</span>
-      </a>
-      <!--
-		<div style="position: absolute; top:25%; height: 75%; width:100%; text-align: center;">
-			{{ with .Site.Params.banner.title }} <h2 id="bannerTitle" class="disapearWhenSmall text-white mb-3">{{ . }}</h2> {{ end }}
-      {{ with .Site.Params.banner.description | safeHTML }} <p class="disapearWhenSmall text-white mb-4">{{ . }}</p> {{ end }}
-      <br>
-      <div style="position: absolute; bottom: 20%; width:100%; ">
-        {{ if .Site.Params.recruitmentTime }}
-          <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary">Recrutamento 2020/2021 </a>
-        {{ end }}
-      </div>
-    </div>
-  -->
-  <!--
-  </div>
--->
-</div>
-{{ "<!-- /header -->" | safeHTML }}
-
-<section class="section sec-membros fs-large pb-4">
-  <div style="display: flex; margin: auto">
-    {{ if .Site.Params.recruitmentTime }}
-      <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary m-auto"> Vê a nossa página de recrutamento aqui! </a>
-    {{ end }}
-  </div>
-</section>
-
-{{ "<!-- sobre -->" | safeHTML }}
-<section class="section sec-projetos fs-large">
-  <div class="container">
-      <div class="row justify-content-center">
-          <div class="col-12 text-center">
-            <h1 class="section-title">A HackerSchool</h1>
-            <p style="color:white; margin-bottom: 40px">
-              Desde 2012, a HackerSchool foca-se na criação de projetos nas mais diversas áreas da tecnologia, incentivando os seus membros a aprender e a colocar em prática o seu conhecimento em situações reais.
-              <br> Acreditamos num ambiente multidisciplinar e acessível para qualquer aluno, com ou sem bases, acompanhando o seu processo de aprendizagem, seguindo o ideal learn by doing e partilhando conhecimentos através de Workshops e dos nossos projetos já desenvolvidos ou em desenvolvimento.
-
-            </p>
-            <a  href='{{ "membros" | absURL }}' class="btn btn-primary" style="margin-bottom: 40px;">Vê aqui os nossos membros! </a>
-          </div>
-      </div>
-  </div>
-</section>
-{{ "<!-- /sobre -->" | safeHTML }}
 
 
-{{ "<!-- projetos -->" | safeHTML }}
-<section class="section sec-about sec-membros shadow">
-  <div class="container">
-    <div class="col-12 text-center">
-      <h2 class="section-title">Projeto do mês</h2>
-      <h3> O projeto com mais progresso e com melhores resultados deste mês</h3>
-    </div>
-    <div class="row justify-content-center">
-        <!--
-        {{ range where .Pages "Type" "projetos" }}
-        {{ range .Pages}}          
-        {{ if .Params.destacado }}
-        {{ "<!-- projeto --><!--" | safeHTML }}
-        <div class="col-lg-6 col-sm-6 mb-4">
-            <div class="px-4 py-2 bg-gray dynamicThingy text-center d-block">
-              <i class="{{ .Params.Icon }} icon text-dark d-block mb-4"></i>
-              <h3 class="mb-3">{{ .Title }}</h3>
-              <div class="projeto-foto"><img src="{{ .Params.Photo | absURL }}" /></div>
-              <p style="color:white;" class="mb-0">{{ .Description }}</p>
-            </div>
-          </div>
-        {{ "<!-- /projeto --><!--" | safeHTML }}
-        {{ end }}
-        {{ end }}
-        {{ end }}
-        -->
-      <div class="row justify-content-center pbottom-20 projectsWrapper">{{ range where .Pages "Type" "projetos" }}
-        {{ range where .Pages "Type" "currentProject" }}          
-        {{ if .Params.projectOfTheMonth }}
-        {{ "<!-- projeto -->" | safeHTML }}
-        <div class="col-lg-6 col-sm-12 col-xs-12 mb-4 fader fader-fadeInUp projectWrapper">
-          <div class="px-4 py-2 bg-gray dynamicThingy text-center d-block">
-            <div>
-              <i class="{{ .Params.Icon }} icon text-dark d-block mb-4"></i>
-              <h3 class="mb-3">{{ .Title }}</h3>
-              <div class="projeto-foto"><img src="/images/projetos/{{ .Params.Photo }}" /></div>
-            </div>
-            <p style="color:white;" class="mb-0">{{ .Description }}</p>
-            <div class="col-xs-12 projectMembersContainer">
-              {{ range .Params.teamPhotos }}
-                  <img class="projectMembersPhoto" src="/images/membros/{{.}}">
-              {{ end }}
-            </div>
-          </div>
-        </div>
-        {{ "<!-- /projeto -->" | safeHTML }}
-        {{ end }}
-        {{ end }}
-        {{ end }}
-      </div>
-      <br>
-  </div>
-</section>
-{{ "<!-- /projetos -->" | safeHTML }}
+<link rel="stylesheet" href="{{ "css/matrixstyles.css" | relURL }}">
 
+<p id="type-js"></p> 
+<div id="overlay"></div>
+<canvas id="matrixCanvas"></canvas>
 
-{{ "<!-- projetos -->" | safeHTML }}
-<section class="section sec-about sec-membros shadow">
-  <div class="container">
-    <div class="col-12 text-center">
-      <h2 class="section-title">Outros Projetos</h2>
-    </div>
-    <div class="row justify-content-center">
-        <!--
-        {{ range where .Pages "Type" "projetos" }}
-        {{ range .Pages}}          
-        {{ if .Params.destacado }}
-        {{ "<!-- projeto --><!--" | safeHTML }}
-        <div class="col-lg-6 col-sm-6 mb-4">
-            <div class="px-4 py-2 bg-gray dynamicThingy text-center d-block">
-              <i class="{{ .Params.Icon }} icon text-dark d-block mb-4"></i>
-              <h3 class="mb-3">{{ .Title }}</h3>
-              <div class="projeto-foto"><img src="{{ .Params.Photo | absURL }}" /></div>
-              <p style="color:white;" class="mb-0">{{ .Description }}</p>
-            </div>
-          </div>
-        {{ "<!-- /projeto --><!--" | safeHTML }}
-        {{ end }}
-        {{ end }}
-        {{ end }}
-        -->
-      <div class="row justify-content-center pbottom-20 projectsWrapper">{{ range where .Pages "Type" "projetos" }}
-        {{ range where .Pages "Type" "currentProject" }}          
-        {{ if and (.Params.destacado) (not .Params.projectOfTheMonth)}}
-        {{ "<!-- projeto -->" | safeHTML }}
-        <div class="col-lg-6 col-sm-12 col-xs-12 mb-4 fader fader-fadeInUp projectWrapper">
-          <div class="px-4 py-2 bg-gray dynamicThingy text-center d-block">
-            <div>
-              <i class="{{ .Params.Icon }} icon text-dark d-block mb-4"></i>
-              <h3 class="mb-3">{{ .Title }}</h3>
-              <div class="projeto-foto"><img src="/images/projetos/{{ .Params.Photo }}" /></div>
-            </div>
-            <p style="color:white;" class="mb-0">{{ .Description }}</p>
-            <div class="col-xs-12 projectMembersContainer">
-              {{ range .Params.teamPhotos }}
-                  <img class="projectMembersPhoto" src="/images/membros/{{.}}">
-              {{ end }}
-            </div>
-          </div>
-        </div>
-        {{ "<!-- /projeto -->" | safeHTML }}
-        {{ end }}
-        {{ end }}
-        {{ end }}
-      </div>
-      <div style="text-align: center; padding-bottom: 20px;">
-        <a href='{{ "projetos" | absURL }}' class="btn btn-primary"> Vê mais dos nossos projetos! </a>
-      </div>
-      <br>
-  </div>
-</section>
-{{ "<!-- /projetos -->" | safeHTML }}
+<script src="{{ "js/scripttext.js" | relURL }}"></script>
+<script src="{{ "js/scriptmatrix.js" | relURL }}"></script>
+
 
 {{ "<!-- contactos -->" | safeHTML }}
-<section class="section fs-large sec-projetos">
+<!-- <section class="section fs-large sec-projetos">
   <div class="container">
       <div class="row justify-content-center">
           <div class="col-12 text-center">
@@ -226,7 +48,7 @@ echo "Connected successfully";
           </div>
       </div>
   </div>
-</section>
+</section> -->
 {{ "<!-- /contactos -->" | safeHTML }}
 
-{{ partial "footer.html" . }}
+<!-- {{ partial "footer.html" . }} -->
