--- a/layouts/page/recrutamento.html
+++ b/layouts/page/recrutamento.html
@@ -8,100 +8,38 @@
 </header>
 {{ "<!-- /navigation -->" | safeHTML }}
 
+<div id="overlay"></div>
+<canvas id="matrixCanvas"></canvas>
+<script src="{{ "js/scriptmatrix.js" | relURL }}"></script>
+
 <!-- details page -->
 <section style="text-align: left;
 min-height: 100%;
 /* equal to footer height */ " class="single sec-membros fader-alternate">
 
 	<div style="background-color: 0xfff">
-	<h1 class="responsiveHeaderText" style="color:white; text-align: center; height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Junta-te a nós</h1>
-	
+<!-- 	<h1 class="responsiveHeaderText" style="color:white; text-align: center; height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Junta-te a nós</h1>
+ -->	
 	<!--padding 100px-->
 	<div class="container pt-4" style="background-color: 0xfff">
 		<!-- fix url -->
 		<!-- <a href='{{ "recrutamento" | absURL }}' class="btn btn-primary"> Clica aqui se quiseres saltar já á ação </a> -->
-
-		<section  class="dynamicThingy fader">
-		<h4> Apresentação do recrutamento </h4>
-		<p style="color:white; "> 
-			Se estás a começar o teu curso de engenharia e gostavas 
-			de colocar as mãos na massa para ganhares experiência num certo ramo da
-			tecnologia, este é o sítio certo para ti. Somos um grupo de alunos de várias
-			áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos,
-			e transmitir os nossos conhecimentos promovendo a entreajuda e inovação! 
-			A HackerSchool está a recrutar novos membros
-			até 7 de Outubro!
-		</p>
-		</section>
-
-		<section class="dynamicThingy fader">
-		<h4> O que valorizamos (não é cibersegurança) </h4>
-		<p style="color:white; "> 
-			Como membro da HackerSchool, para além de te poderes chamar
-			Hacker e meter respeito a qualquer utilizador de computador
-			ou smartphone, terás sempre perto de ti: 
-		</p>
-
-		<ul style="color:white; font-size:16px; text-align: left">
-			<li>
-				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Uma equipa exploradora e interessada em aprender e ajudar; 
-			</li>
-			<li>
-				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Atividades e apoio para te manter no caminho certo e motivado; 
-			</li>
-			<li>
-				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Várias oportunidades para aprender matéria nova ou até mesmo melhorar 
-				a que já souberes - novo ou velho Hacker, aprender não tem idade; 
-			</li>
-			<li>
-				&nbsp;&nbsp;&nbsp;&nbsp;<i class="fas fa-terminal"></i> Um mundo de ideias e inovações que podem mudar a maneira como 
-				vias as tecnologias à tua volta - podes começar a
-				questionar como o microondas funciona.
-			</li>
-		</ul>
-
-		<p style="color:white; ">
-			Ao mesmo tempo, como membro esperamos que tenhas imensa vontade e iniciativa 
-			para todos estes desafios e eventos (mesmo com ou sem COVID-19). 
-			Achas que aguentas?
-		</p>
-		</section>
-		
-		<section  class="dynamicThingy fader">
-				<h4>Tens uma grande ideia mas não sabes como executá-la? A HackerSchool é o núcleo para ti!</h4>
-		<div style="color:white; display: flex; 
-        flex-wrap: wrap; flex-direction: row; justify-content: center; margin:auto;">
-			<div style="background-color: var(--secondary-color); width: 250px; " class="dynamicThingy text-left helperCard">
-				Terás uma reunião inicial que serve para debater ideias e para formar grupos,
-				desenvolvendo a tua parte social e trabalho em equipa.
-
-				<br>
-				<div class="d-flex align-items-center justify-content-center">
-					<i class="fas fa-users fa-3x pt-2"></i>
-				</div>
-			</div >
-			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
-				Para além disso, todos os semestres são planeados vários workshops em
-				várias áreas que consideramos importantes para desenvolver a tua cultura hacker.
-
-				<br>
-				<div class="d-flex align-items-center justify-content-center">
-					<i class="fas fa-cogs fa-3x pt-2"></i>
-				</div>
-			</div>
-			<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
-				Para o caso de te sentires sozinho nesta jornada de fazer o teu
-				projeto acontecer, não te preocupes! Temos uma equipa de HackExperts e uma inteira comunidade sempre disposta a ajudar!
-
-				<br>
-				<div class="d-flex align-items-center justify-content-center">
-					<i class="fas fa-robot fa-3x pt-2"></i>
-				</div>
+		<div class="col-12 text-center">
+			<h2 class="section-title">Recrutamento</h2>
+		</div>		
+		<div class="row justify-content-center">
+			<div class="col-12 text-center">
+				<p style="color:white; margin-bottom: 40px; font-size:20px">
+					O nosso processo de recrutamento consiste numa série de tarefas que 
+					terás de completar ao longo de um mês, algumas mais simples como resolver
+					puzzles, outras mais complicadas como programar e mexer em eletrónica. 
+					Durante este período, poderás participar em workshops para te ajudar, 
+					ou falar com outros recrutas e membros do núcleo. Para além disso, teremos 
+					eventos para promover team building, e algumas outras surpresas. 
+					Se estás interessado, tenta o desafio!
+				</p>
 			</div>
 		</div>
-
-		<!-- insert clipart here -->
-		</section>
 		
 		<section class="section shadow fader">
 		<!-- fix url -->
@@ -112,6 +50,43 @@ min-height: 100%;
 			{{ if .Site.Params.recruitmentTime }} Inscreve-te Agora! {{ else }} Inscreve-te no proximo semestre! {{ end }}
 		</a>	
 		</section>
+		
+		<div style="padding-top:50px;" class="col-12 text-center">
+			<h2 class="section-title">Depois do Recrutamento</h2>
+		</div>		
+
+	<div style="color:white; display: flex; 
+	flex-wrap: wrap; flex-direction: row; justify-content: center; margin:auto;">
+		<div style="background-color: var(--secondary-color); width: 250px; " class="dynamicThingy text-left helperCard">
+			Terás uma reunião inicial que serve para debater ideias e para formar grupos,
+			desenvolvendo a tua parte social e trabalho em equipa.
+
+			<br>
+			<div class="d-flex align-items-center justify-content-center">
+				<i class="fas fa-users fa-3x pt-2"></i>
+			</div>
+		</div >
+		<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
+			Para além disso, todos os semestres são planeados vários workshops em
+			várias áreas que consideramos importantes para desenvolver a tua cultura hacker.
+
+			<br>
+			<div class="d-flex align-items-center justify-content-center">
+				<i class="fas fa-cogs fa-3x pt-2"></i>
+			</div>
+		</div>
+		<div style="background-color: var(--secondary-color); width: 250px" class="dynamicThingy text-left helperCard">
+			Para o caso de te sentires sozinho nesta jornada de fazer o teu
+			projeto acontecer, não te preocupes! Temos uma equipa de HackExperts e uma inteira comunidade sempre disposta a ajudar!
+
+			<br>
+			<div class="d-flex align-items-center justify-content-center">
+				<i class="fas fa-robot fa-3x pt-2"></i>
+			</div>
+		</div>
+	</div>
+
+	<!-- insert clipart here -->
 		<!--
 		<p style="text-align: justify;">Somos um grupo de alunos de várias áreas da engenharia, entusiasmados por conceber as nossas ideias e projectos, e transmitir os nossos conhecimentos!</p>
 		<h4 style="text-align: justify;">O que é a HackerSchool?</h4>
