--- a/layouts/section/projetos.html
+++ b/layouts/section/projetos.html
@@ -8,10 +8,14 @@
 </header>
 {{ "<!-- /navigation -->" | safeHTML }}
 
+<div id="overlay"></div>
+<canvas id="matrixCanvas"></canvas>
+<script src="{{ "js/scriptmatrix.js" | relURL }}"></script>
+
 <!-- details page -->
 <section class="single sec-membros">
-  <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Projetos</h1>
-  <!--font-size: 6.5vw;-->
+<!--   <h1 class="responsiveHeaderText" style="color:white; text-align: center;height: 200px;background-color: var(--primary-color);vertical-align: middle;text-align: center;vertical-align: middle;line-height: 200px;">Projetos</h1>
+ -->  <!--font-size: 6.5vw;-->
   <div class="container pt-4">
     <div class="col-12 text-center">
       <h2 class="section-title"> Projetos Atuais </h2>
