fix no background dos projetos

--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -711,9 +711,9 @@ li.parent a {
   font-size: 1.222em;
 }
 
-.sec-projetos {
+/* .sec-projetos {
   background-color: #2a2b29;
-}
+} */
 .projeto-foto {
   margin: 0.5em;
 }
