texto home page diferente

--- a/layouts/page/sobre.html
+++ b/layouts/page/sobre.html
@@ -71,11 +71,11 @@
         </p>
         </div>
 
-        <a href="/sobre/textos">
+<!--         <a href="/sobre/textos">
           <div class="dynamicThingy fader">
               <h1>Textos</h1>
           </div>
-        </a>
+        </a> -->
         
     <!-- </div> -->
   </div>
