--- a/themes/dot/layouts/partials/footer.html
+++ b/themes/dot/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<footer class="section sec-membros pb-0">
+<footer class="section sec-membros">
   <div class="container">
     <div class="row" style="display: flex; align-items: center;">
       <div class="col-md-4 text-md-left text-center">
